# auto-function-serving

./: README.md  pyproject.toml
src/auto_function_serving/: ServerHandler.py
src/auto_function_serving.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: auto_function_serving_test.py  test_auto_function_serving.py  tests.py
