[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "auto_function_serving"
version = "0.0.1"
authors = [
  { name="Arrman Anicket Saha", email="arrmansa99+430@gmail.com" },
]
description = "A python package to offload a function call to an http server automatically using a decorator."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/arrmansa/auto-function-serving"
"Bug Tracker" = "https://github.com/arrmansa/auto-function-serving/issues"
